--- a/package.json
+++ b/package.json
@@ -9,6 +9,7 @@
     "seed": "node ./seeder"
   },
   "dependencies": {
+    "axios": "^1.1.2",
     "bcrypt": "^5.0.1",
     "cookie-parser": "~1.4.4",
     "debug": "~2.6.9",
